--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "tsc && mcp-build",
     "watch": "tsc --watch",
     "start": "node --require ./scripts/node24-polyfills.cjs dist/index.js",
-    "fetch-catalogs": "node scripts/fetch-catalogs.js"
+    "fetch-catalogs": "node scripts/fetch-catalogs.js",
+    "validate": "mcp validate"
   },
   "dependencies": {
     "astronomy-engine": "^2.1.17",
